--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,7 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="FantomPixels is a unique NFT project on the Fantom
-          Blockchain consisting of 1024 NFTs visually represented on a 32 x 32 grid. Each NFT has 3
-          modifiable attributes built in the Smart Contract that appear on the grid – a Title, an Image
-          and a Custom URL. Owners of FantomPixels NFTs can update these attributes indefinitely
-          and the all the previous attributes are stored on the Fantom Blockchain. The Token ID of
-          the NFT corresponds to a 64 x 64 square of pixels where the Image is rendered, Title is
-          displayed and the Custom URL is linked for the entire world to see. Be a part of a living
-          project on the Fantom Blockchain that transcends time by minting a FantomPixels NFT!" />
+    <meta name="description" content="" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -30,9 +23,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=Montserrat:wght@600;800&display=swap');
     </style>
-    <title>FantomPixels</title>
+    <title>SOS Rewards</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
